syntax = "proto3";
package tutorial;
option go_package = "protocol-buffers/proto/pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

message Person {
  string name = 1;
  int32 id = 2;  // Unique ID number for this person.`
  string email = 3;


  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;

  google.protobuf.Timestamp last_updated = 5;
  google.protobuf.Any detail = 6;

  oneof oneOf {
    string a = 7;
    string b = 8;
  }
}

// Our address book file is just one of these.
message AddressBook {
  repeated Person people = 1;
}

service FooService {
  rpc GetSomething(AddressBook) returns (AddressBook);
}